--- a/patbati/bati/templates/bati/bati_detail.html
+++ b/patbati/bati/templates/bati/bati_detail.html
@@ -73,4 +73,8 @@
         display: None !important;
     }
 </style>
+<script>    
+    $('[data-toggle="tooltip"]').tooltip()
+</script>
+
 {% endblock extrabody %}
