ajout nouveau champs retour Marion

--- a/patbati/bati/templates/bati/bati_detail_attributes.html
+++ b/patbati/bati/templates/bati/bati_detail_attributes.html
@@ -3,6 +3,7 @@
 {% block attributes %}
 
 {% include "bati/properties/bati_renseignements.html" %}
+{% include "bati/properties/bati_proprio.html" %}
 
 {% include "bati/properties/bati_geo.html" %}
 
