--- a/patbati/bati/templates/bati/bati_form.html
+++ b/patbati/bati/templates/bati/bati_form.html
@@ -1,20 +1,11 @@
 {% extends "mapentity/mapentity_form.html" %}
 {% load i18n crispy_forms_tags %}
 
-{% block mainform %}
-    <form id="mainform" action="{% if object.pk %}{{ object.get_update_url }}{% else %}{{ object.get_add_url }}{% endif %}" class="form-horizontal" method="POST">
-
-        {% crispy form %}
-
-
-    </form>
-
-
-{% endblock mainform %}
 
 
 {% block extrabody %}
-    {{ block.super }}
+{{ block.super }}
+<h1>LAAA</h1>
     <script type="text/javascript">
         $(window).ready(function () {
             // TODO: do this with crispyforms !
